# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20230104155137_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
